--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,20 +1,29 @@
 altgraph==0.17.4
+bottle==0.13.2
+bottle-websocket==0.2.9
 certifi==2025.1.31
 charset-normalizer==3.4.1
+darkdetect==0.8.0
 docutils==0.21.2
+Eel==0.18.1
 filetype==1.2.0
+future==1.0.0
+gevent==24.11.1
+gevent-websocket==0.10.1
+greenlet==3.1.1
 idna==3.10
-Kivy==2.3.1
-Kivy-Garden==0.1.5
-kivymd==1.2.0
 packaging==24.2
 pillow==10.4.0
 plyer==2.1.0
 Pygments==2.19.1
 pyinstaller==6.12.0
 pyinstaller-hooks-contrib==2025.2
+pyparsing==3.2.3
 requests==2.32.3
 setuptools==78.0.2
+typing_extensions==4.13.0
 urllib3==2.3.0
 validators==0.34.0
 yt-dlp==2025.3.27
+zope.event==5.0
+zope.interface==7.2
