--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,22 +13,26 @@ jobs:
         with:
           python-version: 3.12
 
-      # - name: Install deps
-      #   run: pip install -r requirements.txt pyinstaller
+      - name: Install deps
+        run: pip install -r requirements.txt pyinstaller
 
       # - name: Bundle application
       #   run: pyinstaller main.spec
       #   #  --noconfirm --onedir --windowed --add-data "C:\Users\name\AppData\Local\Programs\Python\Python311\Lib\site-packages\customtkinter;customtkinter/" --add-data --hidden-import plyer.platforms.win.filechooser --hidden-import plyer.platforms.linux.filechooser
 
-      - name: PyInstaller Windows
-        uses: JackMcKew/pyinstaller-action-windows@main
-        with:
-          path: src
+      # - name: PyInstaller Windows
+      #   uses: JackMcKew/pyinstaller-action-windows@main
+      #   with:
+      #     path: src
+
+      - name: Bundle application
+        working-directory: ./src
+        run: python3 -m eel main.py web -n ytdlp-gui --onefile --noconsole --hidden-import plyer.platforms.win.filechooser --hidden-import plyer.platforms.linux.filechooser
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          path: src/dist/windows
+          path: src/dist
 
   github-release:
     if: startswith(github.ref, 'refs/tags/') # Only run on tag push
