--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
           python-version: 3.12
 
       - name: Install deps
+        working-directory: ./src
         run: pip install -r requirements.txt pyinstaller
 
       # - name: Bundle application
