--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,8 @@ jobs:
           path: src/dist/ytdlp-gui.exe
 
   github-release:
+    permissions:
+      contents: write
     if: startswith(github.ref, 'refs/tags/') # Only run on tag push
     needs: [build]
     runs-on: ubuntu-latest
