--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,10 +25,20 @@ jobs:
       #   uses: JackMcKew/pyinstaller-action-windows@main
       #   with:
       #     path: src
+      - name: Download ffmpeg binary
+        working-directory: ./src
+        run: |
+          mkdir ffmpeg
+          wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl.zip -O ./ffmpeg/ffmpeg.zip
+          cd ffmpeg
+          unzip ffmpeg.zip
+          mv ffmpeg-master-latest-win64-gpl/bin/ffmpeg.exe
+          rm -rf ffmpeg-master-latest-win64-gpl
+          rm ffmpeg.zip
 
       - name: Bundle application
         working-directory: ./src
-        run: python3 -m eel main.py web -n ytdlp-gui --onefile --noconsole --hidden-import plyer.platforms.win.filechooser --hidden-import plyer.platforms.linux.filechooser
+        run: python -m eel main.py web -n ytdlp-gui --onefile --noconsole --hidden-import plyer.platforms.win.filechooser --hidden-import plyer.platforms.linux.filechooser --add-data ./ffmpeg:ffmpeg
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
