--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           python-version: 3.12
 
+      - name: Install wget
+        run: choco install wget --no-progress
+
       - name: Install deps
         working-directory: ./src
         run: pip install -r requirements.txt pyinstaller
