--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
           wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl.zip -O ./ffmpeg/ffmpeg.zip
           cd ffmpeg
           unzip ffmpeg.zip
-          mv ffmpeg-master-latest-win64-gpl/bin/ffmpeg.exe
+          mv ffmpeg-master-latest-win64-gpl/bin/ffmpeg.exe ..
           rm ffmpeg-master-latest-win64-gpl
           rm ffmpeg.zip
 
