--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
         working-directory: ./src
         run: |
           mkdir ffmpeg
-          wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl.zip -O ./ffmpeg/ffmpeg.zip
+          wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl.zip -O ffmpeg.zip
           unzip ffmpeg.zip
           mv ffmpeg-master-latest-win64-gpl/bin/ffmpeg.exe ffmpeg/
           rmdir ffmpeg-master-latest-win64-gpl/
