--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install deps
         working-directory: ./src
-        run: pip install -r requirements.txt pyinstaller
+        run: pip install -r requirements.txt pyinstaller pypiwin32
 
       # - name: Bundle application
       #   run: pyinstaller main.spec
