--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,9 @@ jobs:
 
       - name: Install deps
         working-directory: ./src
-        run: pip install -r requirements.txt pyinstaller pypiwin32
+        run: |
+          pip install -r requirements.txt 
+          pip install pyinstaller pypiwin32
 
       # - name: Bundle application
       #   run: pyinstaller main.spec
