--- a/.github/workflows/tag-on-pr.yml
+++ b/.github/workflows/tag-on-pr.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   tag-on-pr:
+    permissions: write-all
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     steps:
       - name: Get current date
         id: date
