--- a/.github/workflows/tag-on-pr.yml
+++ b/.github/workflows/tag-on-pr.yml
@@ -11,7 +11,7 @@ jobs:
   tag-on-pr:
     permissions: write-all
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true || ${{ github.event_name == "workflow_dispatch"}}
+    if: github.event.pull_request.merged == true || ${{ github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Get current date
         id: date
